# compact-dict

./: .gitignore  Cargo.toml  README.md  patch_bidirectional.py  patch_put.py
.github/workflows/: publish.yml
benches/: dict_bench.rs  diverse_bench.rs  workload_bench.rs
src/: ahash.rs  dict.rs  keys_container.rs  lib.rs
tests/: rkyv_tests.rs
