[package]
name = "compact-dict"
version = "0.1.0"
edition = "2024"

[dependencies]
wide = "0.7.33"
rustc-hash = "1.1"
ahash = "0.8"

[dev-dependencies]
criterion = "0.5"
hashbrown = "0.14"
fxhash = "0.2"

[[bench]]
name = "dict_bench"
harness = false


[[bench]]
name = "workload_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1