[package]
name = "compact-dict"
version = "0.1.1"
edition = "2024"
description = "A highly customizable, open-addressing dictionary in Rust."
repository = "https://github.com/gustawdaniel/compact-dict"
license = "MIT"
keywords = ["hashmap", "dictionary", "simd"]
categories = ["data-structures"]

[dependencies]
wide = "0.7.33"
rustc-hash = "1.1"
ahash = "0.8"
rkyv = { version = "0.7", features = ["default"], optional = true }

[dev-dependencies]
criterion = "0.5"
hashbrown = "0.14"
fxhash = "0.2"
indexmap = "2.13.0"

[[bench]]
name = "dict_bench"
harness = false

[[bench]]
name = "diverse_bench"
harness = false


[[bench]]
name = "workload_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[features]
rkyv = ["dep:rkyv"]
